[package]
name = "spamsum"
version = "0.1.0"
authors = ["dubbl <dubbel14@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2", optional = true}

[lib]
name = "spamsum"
path = "src/lib.rs"

[features]
build-binary = ["clap"]

[[bin]]
name = "spamsum"
path = "src/main.rs"
required-features = ["build-binary"]
